samples/_failures_safe/1761488969_82a59a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0067845e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0067845e.c:153:9: error: expected declaration or statement at end of input
  153 |         current_token[1] = '\0';
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_0067845e.c:153:9: error: expected declaration or statement at end of input
